# agentic_engineering_system

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  engineering_agents.db  engineering_agents.db-shm  engineering_agents.db-wal  ingestion_sources.yaml.example  pyproject.toml  skills-lock.json  test_cases.md
.context/: architecture_map.md
.context/mobile-app/: README.md
.context/mobile-backend/: README.md
.context/mobile-prediction-service/: README.md
.context/mobile-predictor/: README.md
.context/mobile-terraform/: README.md
.context/test-path-repo/: sample.txt
.github/workflows/: ci.yml
aes-ui/: package-lock.json  package.json
config/: default.yaml  dev.yaml  prod.yaml  staging.yaml
docs/: setup_gdrive.md
evaluation/data/: rag_testset.json  results.csv  test_set.json
evaluation/rag/: evaluate_rag.py  generate_testset.py  ingest_eval_data.py
evaluation/results/: metrics.json
evaluation/vector/: chroma.sqlite3
long_term_memory/: chroma.sqlite3
long_term_memory/vector/: chroma.sqlite3
scripts/: discover_e2b.py  eval_rag.sh  manage_sandboxes.py  sync_prompts.py  test_chroma_ingestion.py  test_kuzu_ingestion.py  test_ops_agent.py  test_pipeline.py  test_retrieval.py  test_smart_chunker.py
src/: __init__.py  main.py
src/agents/: coder.yaml  growth.yaml  ops.yaml  planning.yaml  supervisor.yaml
tests/: manual_deterministic_test.py  test_coder_deterministic.py  test_e2b_aider_mock.py  test_e2b_live.py  test_github_decoding_fix.py  test_manual_deterministic.py  test_ops_deterministic.py  test_smart_chunker.py  test_webhook.py
(+111 files in other folders)
