[project]
name = "agentic-engineering-system"
version = "0.1.0"
description = "Multi Agent Orchestration for Engineering Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langchain-chroma>=0.1.2",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.2",
    "sqlmodel>=0.0.37",
    "isort>=8.0.0",
    "black>=26.1.0",
    "langchain>=1.2.10",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "boto3>=1.42.62",
    "langchain-aws>=1.3.1",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
]
